# family-tree-api

./: .env.example  Cargo.toml
docs/: openapi.yaml
migrations/: 20231228175953_init.sql
src/: lib.rs  main.rs
src/database/: mod.rs  models.rs
src/handlers/: hello_world.rs  mod.rs
src/handlers/individuals/: delete_individual.rs  get_all_individuals.rs  get_one_individual.rs  mod.rs  patch_individual.rs  post_individual.rs
src/handlers/relationships/: delete_relationship.rs  get_all_relationships.rs  mod.rs  patch_relationship.rs  post_relationship.rs
src/handlers/users/: login.rs  register.rs
src/middlewares/: auth.rs
src/queries/: mod.rs
src/queries/individuals/: create_individual.rs  delete_individual.rs  mod.rs  read_all_individuals.rs  read_one_individual.rs  update_individual.rs
src/queries/relationships/: create_relationship.rs  delete_relationship.rs  mod.rs  read_all_relationships.rs  update_relationship.rs
src/queries/users/: create_user.rs  mod.rs  read_user_by_email.rs
