[package]
name = "family-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
axum = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.3", features = ["postgres", "macros", "runtime-tokio", "tls-native-tls", "uuid", "time", "chrono"] }
argon2 = "0.5.2"
dotenv = "0.15.0"
tower-http = { version = "0.5.0", features = ["cors"] }
jsonwebtoken = "9.2.0"
time = { version = "0.3.34", features = ["parsing"] }
